--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
 
             <!-- Floating Post Form -->
             <div class="floating-form-container">
-                <div class="container">
-                    <section class="form-container compact-form">
+                <div class="container" style="padding: 10px;">
+                    <section class="form-container compact-form" style="padding: 10px;">
                         <div style="display: flex; gap: 15px;">
                             <div style="flex: 1;">
                                 <input type="text" id="new-title" class="input-field" placeholder="件名..."
-                                    style="margin-top: 0 !important; margin-bottom: 10px; width: 100%;">
+                                    style="margin-top: 0 !important; margin-bottom: 15px; width: 100%;">
                                 <div style="position: relative; width: 100%;">
                                     <div id="new-content" contenteditable="true" class="input-field rich-editor"
                                         placeholder="内容... @メンション"
