--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                         style="bottom: 100%; top: auto; display: none;"></div>
                                 </div>
                             </div>
-                            <div style="display: flex; flex-direction: column; gap: 12px; margin-top: 5px;">
+                            <div style="display: flex; flex-direction: column; gap: 15px; margin-top: 0;">
                                 <!-- Icon Column (Right) -->
                                 <button id="attach-file-btn" class="btn btn-outline"
                                     style="position: relative; padding: 6px 10px; height: 38px; width: 38px; display: flex; align-items: center; justify-content: center;"
