--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
                                 <div style="position: relative; width: 100%;">
                                     <div id="new-content" contenteditable="true" class="input-field rich-editor"
                                         placeholder="内容... @メンション"
-                                        style="margin-top: 0 !important; min-height: 38px; width: 100%;">
-                                    </div>
+                                        style="margin-top: 0 !important; min-height: 38px; width: 100%;"></div>
                                     <div id="attachment-preview-area" class="attachment-preview-area"></div>
                                     <div id="mention-list" class="mention-list"
                                         style="bottom: 100%; top: auto; display: none;"></div>
