--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
                 <div class="container" style="padding: 10px;">
                     <section class="form-container compact-form" style="padding: 10px;">
                         <div style="display: flex; gap: 15px;">
-                            <div style="flex: 1;">
+                            <div style="flex: 1; display: flex; flex-direction: column; gap: 15px;">
                                 <input type="text" id="new-title" class="input-field" placeholder="件名..."
-                                    style="margin-top: 0 !important; margin-bottom: 15px; width: 100%;">
+                                    style="margin-top: 0 !important; width: 100%;">
                                 <div style="position: relative; width: 100%;">
                                     <div id="new-content" contenteditable="true" class="input-field rich-editor"
                                         placeholder="内容... @メンション"
-                                        style="margin-top: 0 !important; min-height: 100px; width: 100%;"></div>
+                                        style="margin-top: 0 !important; min-height: 80px; width: 100%;"></div>
                                     <div id="attachment-preview-area" class="attachment-preview-area"></div>
                                     <div id="mention-list" class="mention-list"
                                         style="bottom: 100%; top: auto; display: none;"></div>
