--- a/index.html
+++ b/index.html
@@ -75,35 +75,41 @@
                     </div>
                 </div>
                 <button id="settings-btn" class="btn btn-sm"
-                    style="background: rgba(255,255,255,0.1); padding: 5px 8px;">⚙️</button>
+                    style="background: rgba(255,255,255,0.1); padding: 5px; width: 32px; height: 32px; display: flex; align-items: center; justify-content: center;">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="12" cy="12" r="3"></circle>
+                        <path
+                            d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z">
+                        </path>
+                    </svg>
+                </button>
                 <button id="logout-btn" class="btn btn-sm"
-                    style="background: rgba(255,255,255,0.1); display: flex; align-items: center; gap: 6px;">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    style="background: rgba(255,255,255,0.1); width: 32px; height: 32px; display: flex; align-items: center; justify-content: center;"
+                    title="ログアウト">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                         stroke-linecap="round" stroke-linejoin="round">
                         <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
                         <polyline points="16 17 21 12 16 7"></polyline>
                         <line x1="21" y1="12" x2="9" y2="12"></line>
                     </svg>
-                    <span>ログアウト</span>
                 </button>
             </div>
         </header>
 
         <div class="main-wrapper"
-            style="display: flex; min-height: calc(100vh - 50px); margin-top: 50px; padding-left: 72px;">
+            style="display: flex; min-height: calc(100vh - 50px); margin-top: 50px; padding-left: 322px;">
             <aside id="teams-sidebar" class="teams-sidebar">
-                <!-- Teams icons here -->
-                <div class="team-icon active" title="All Threads" onclick="switchTeam(null)">
+                <div class="team-icon active" title="Teams" id="nav-teams" onclick="switchGlobalNav('teams')">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                         stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                        <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                        <circle cx="9" cy="7" r="4"></circle>
+                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                        <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
                     </svg>
                 </div>
-                <div class="sidebar-divider"></div>
-                <div id="teams-list" class="teams-list">
-                    <!-- Dynamic teams -->
-                </div>
+                <div id="teams-list" class="teams-list"></div>
                 <button id="btn-add-team" class="team-icon add-team-btn" title="Create Team">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                         stroke-linecap="round" stroke-linejoin="round">
@@ -113,28 +119,21 @@
                 </button>
             </aside>
 
-            <div class="container" style="flex: 1; padding-top: 20px;">
-                <div class="dashboard-layout">
+            <aside id="secondary-sidebar" class="secondary-sidebar">
+                <div class="secondary-sidebar-header">
+                    <h2 id="current-team-name-sidebar">Teams</h2>
+                </div>
+                <div id="channel-list" class="channel-list"></div>
+            </aside>
+
+            <div class="container" style="flex: 1; padding-top: 10px; padding-left: 20px;">
+                <div class="dashboard-layout" style="gap: 20px;">
                     <main class="main-feed-area">
-                        <div id="thread-list" class="feed-list">
-                            <!-- Threads will be injected here -->
-                        </div>
+                        <div id="thread-list" class="feed-list"></div>
                     </main>
-
-                    <aside class="side-panel">
-                        <h3
-                            style="font-size: 1rem; margin-bottom: 1rem; color: var(--text-muted); padding-bottom: 0.5rem; border-bottom: 1px solid rgba(255,255,255,0.1);">
-                            Not Finished</h3>
-                        <div id="pending-sidebar-list" class="sidebar-list">
-                            <!-- Pending small cards will be injected here -->
-                        </div>
-
-                        <h3
-                            style="font-size: 1rem; margin-top: 2rem; margin-bottom: 1rem; color: var(--accent); padding-bottom: 0.5rem; border-bottom: 1px solid var(--accent-light);">
-                            Assigned to Me</h3>
-                        <div id="assigned-sidebar-list" class="sidebar-list">
-                            <!-- Personal tasks will be injected here -->
-                        </div>
+                    <aside class="side-panel" style="display:none;">
+                        <div id="pending-sidebar-list"></div>
+                        <div id="assigned-sidebar-list"></div>
                     </aside>
                 </div>
             </div>
