--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </header>
 
         <div class="main-wrapper"
-            style="display: flex; min-height: calc(100vh - 50px); margin-top: 50px; padding-left: 322px;">
+            style="display: flex; min-height: calc(100vh - 50px); margin-top: 50px; padding-left: 322px; padding-right: 300px;">
             <aside id="teams-sidebar" class="teams-sidebar">
                 <div class="team-icon active" title="Teams" id="nav-teams" onclick="switchGlobalNav('teams')">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -131,9 +131,15 @@
                     <main class="main-feed-area">
                         <div id="thread-list" class="feed-list"></div>
                     </main>
-                    <aside class="side-panel" style="display:none;">
-                        <div id="pending-sidebar-list"></div>
-                        <div id="assigned-sidebar-list"></div>
+                    <aside class="side-panel">
+                        <div class="side-panel-section">
+                            <h3 class="side-panel-title">Not Finished</h3>
+                            <div id="pending-sidebar-list"></div>
+                        </div>
+                        <div class="side-panel-section">
+                            <h3 class="side-panel-title">Mentions</h3>
+                            <div id="assigned-sidebar-list"></div>
+                        </div>
                     </aside>
                 </div>
             </div>
