--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                 </div>
             </div>
             <div class="user-profile">
-                <button id="admin-btn" class="btn btn-sm"
-                    style="background: var(--accent); color: var(--bg-dark); display: none;">マスタ管理</button>
+                <button id="admin-btn" class="btn btn-sm" style="display: none;">マスタ管理</button>
                 <div style="display: flex; align-items: center; gap: 10px; text-align: right;">
                     <div id="header-avatar-img" class="avatar" style="width: 28px; height: 28px;"></div>
                     <div>
@@ -97,8 +96,7 @@
             </div>
         </header>
 
-        <div class="main-wrapper"
-            style="display: flex; min-height: calc(100vh - 50px); margin-top: 50px; padding-left: 322px; padding-right: 300px;">
+        <div class="main-wrapper">
             <aside id="teams-sidebar" class="teams-sidebar">
                 <div class="team-icon active" title="Teams" id="nav-teams" onclick="switchGlobalNav('teams')">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
