--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 <div id="channel-list" class="channel-list"></div>
             </aside>
 
-            <div class="container" style="flex: 1; padding-top: 10px; padding-left: 20px;">
-                <div class="dashboard-layout" style="gap: 20px;">
+            <div class="container" style="flex: 1; height: 100%; padding-left: 20px;">
+                <div class="dashboard-layout">
                     <main class="main-feed-area">
                         <div id="thread-list" class="feed-list"></div>
                     </main>
