--- a/index.html
+++ b/index.html
@@ -131,43 +131,44 @@
 
                         <!-- Static Post Form Area -->
                         <div class="static-form-container">
-                            <section class="form-container compact-form">
-                                <div style="display: flex; gap: 15px;">
-                                    <div style="flex: 1; display: flex; flex-direction: column; gap: 15px;">
-                                        <input type="text" id="new-title" class="input-field" placeholder="件名..."
-                                            style="margin-top: 0 !important; width: 100%;">
-                                        <div style="position: relative; width: 100%;">
-                                            <div id="new-content" contenteditable="true" class="input-field rich-editor"
-                                                placeholder="内容... @メンション"
-                                                style="margin-top: 0 !important; min-height: 50px; width: 100%;"></div>
-                                            <div id="attachment-preview-area" class="attachment-preview-area"></div>
-                                            <div id="mention-list" class="mention-list"
-                                                style="bottom: 100%; top: auto; display: none;"></div>
-                                        </div>
+                            <section class="form-container compact-form"
+                                style="display: flex; flex-direction: column; gap: 10px;">
+                                <!-- Row 1: Title + Clip -->
+                                <div style="display: flex; gap: 10px; align-items: center;">
+                                    <input type="text" id="new-title" class="input-field" placeholder="件名..."
+                                        style="margin-top: 0 !important; flex: 1;">
+                                    <button class="btn btn-outline" id="attach-file-btn" title="ファイル添付"
+                                        style="padding: 0; width: 36px; height: 36px; display: flex; align-items: center; justify-content: center; flex-shrink: 0;">
+                                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+                                            stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                            stroke-linejoin="round">
+                                            <path
+                                                d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48">
+                                            </path>
+                                        </svg>
+                                        <input type="file" id="file-input" style="display:none;" multiple>
+                                    </button>
+                                </div>
+
+                                <!-- Row 2: Content + Send -->
+                                <div style="display: flex; gap: 10px; align-items: flex-end;">
+                                    <div style="position: relative; flex: 1;">
+                                        <div id="new-content" contenteditable="true" class="input-field rich-editor"
+                                            placeholder="内容... @メンション"
+                                            style="margin-top: 0 !important; min-height: 50px; width: 100%;"></div>
+                                        <div id="attachment-preview-area" class="attachment-preview-area"></div>
+                                        <div id="mention-list" class="mention-list"
+                                            style="bottom: 100%; top: auto; display: none;"></div>
                                     </div>
-                                    <div
-                                        style="display: flex; flex-direction: column; gap: 10px; justify-content: flex-end;">
-                                        <button class="btn btn-outline" id="attach-file-btn" title="ファイル添付"
-                                            style="padding: 0; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
-                                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
-                                                stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                                stroke-linejoin="round">
-                                                <path
-                                                    d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48">
-                                                </path>
-                                            </svg>
-                                            <input type="file" id="file-input" style="display:none;" multiple>
-                                        </button>
-                                        <button id="add-thread-btn" class="btn btn-primary" title="投稿"
-                                            style="padding: 0; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; border-radius: 50%;">
-                                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
-                                                stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                                stroke-linejoin="round">
-                                                <line x1="22" y1="2" x2="11" y2="13"></line>
-                                                <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
-                                            </svg>
-                                        </button>
-                                    </div>
+                                    <button id="add-thread-btn" class="btn btn-primary" title="投稿"
+                                        style="padding: 0; width: 36px; height: 36px; display: flex; align-items: center; justify-content: center; border-radius: 50%; flex-shrink: 0; margin-bottom: 10px;">
+                                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+                                            stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                            stroke-linejoin="round">
+                                            <line x1="22" y1="2" x2="11" y2="13"></line>
+                                            <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                                        </svg>
+                                    </button>
                                 </div>
                             </section>
                         </div>
@@ -281,6 +282,36 @@
                     </div>
                     <div style="display: flex; justify-content: flex-end; margin-top: 2rem;">
                         <button class="btn btn-close-modal">閉じる</button>
+                    </div>
+                </div>
+
+                <!-- Team Select Modal (Repost / Move) -->
+                <div id="team-select-modal" class="modal" style="max-width: 400px;">
+                    <h3 id="team-select-title">チームを選択</h3>
+                    <div class="form-group" style="margin-top: 1rem;">
+                        <label>対象チーム</label>
+                        <select id="team-select-input" class="input-field">
+                            <!-- Teams will be populated here -->
+                        </select>
+                    </div>
+                    <div style="display: flex; justify-content: flex-end; gap: 10px; margin-top: 2rem;">
+                        <button class="btn btn-close-modal">キャンセル</button>
+                        <button id="execute-team-action-btn" class="btn btn-primary">実行</button>
+                    </div>
+                </div>
+
+                <!-- Admin User Edit Modal -->
+                <div id="admin-user-edit-modal" class="modal" style="max-width: 400px;">
+                    <h3>ユーザー情報編集 <span
+                            style="font-size: 0.8rem; font-weight: normal; color: var(--text-muted);">管理者用</span></h3>
+                    <div class="form-group" style="margin-top: 1rem;">
+                        <label>表示名</label>
+                        <input type="text" id="admin-edit-display-name" class="input-field">
+                        <input type="hidden" id="admin-edit-user-id">
+                    </div>
+                    <div style="display: flex; justify-content: flex-end; gap: 10px; margin-top: 2rem;">
+                        <button class="btn btn-close-modal">キャンセル</button>
+                        <button id="save-admin-user-edit-btn" class="btn btn-primary">保存</button>
                     </div>
                 </div>
 
