--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <aside id="teams-sidebar" class="teams-sidebar">
                 <!-- All Teams / Dashboard -->
 
+                <div id="teams-list" class="teams-list"></div>
             </aside>
 
 
